--- a/1.html
+++ b/1.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body class="p-3 mb-2 bg-primary text-white">
+<body>
+    <div class="container-fluid" style="color:#0d63fd">
+        <h1>Welcome to my Website</h1>
+    </div>
 </body>
 </html>
